<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="150dp">

    <LinearLayout
        style="@style/Card"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="16dp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="58dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_card"
                style="@style/ExerciseImage"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:contentDescription="@string/exercise_image_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_icon_1" />
        </LinearLayout>

        <TextView
            android:id="@+id/name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name_card_exercise"
            android:theme="@style/CardText" />

        <TextView
            android:id="@+id/amount_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/amount_card_exercise"
            android:textColor="@color/sub_sub_text_color"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/is_status"
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/image_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            tools:srcCompat="@drawable/ic_completed_icon" />
    </LinearLayout>

</RelativeLayout>